[tool.poetry]
name = "proxymamy"
version = "0.1.0"
description = ""
authors = ["leonardo"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
lxml = "^4.6.4"
cssselect = "^1.1.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
